# PlexTraktSync

./: .deepsource.toml  .dockerignore  .env_example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Pipfile  README.md  clear_trakt_collections.py  config.default.json  config.json  config.py  docker-compose.yml  entry.sh  entrypoint.sh  get_env_data.py  history_cleaner.py  main.py  plex-api.sh  plex.py  plex_trakt_sync.bat  plex_trakt_sync.sh  plextraktsync.bat  plextraktsync.sh  pyodide.html  pyproject.toml  pytrakt_extensions.py  renovate.json5  requirements.pipenv.txt  requirements.txt  setup.bat  setup.cfg  trakt-api.sh  (+3 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature.md
.github/workflows/: automerge.yml  ci.yml  codeql-analysis.yml  codeql.yml  docker-image.yml  lint.yml  pypi.yml  python-cron.yml  renovate.yaml  test.yml
app/: clear_trakt_collections.py  get_configs.py  main.py  pytrakt_extensions.py  requirements.txt  trakt_list_util.py
data/: .gitignore  LICENSE.md  README.md  Scheduled Task - Sync Plex Server and Trakt.bat  Sync Plex Server and Trakt.lnk  clear_trakt_collections.py  config.default.json  config.json  config.py  get_env_data.py  hawke.one trakt sync.bat  main.py  main.spec  plex_trakt_sync.sh  pytrakt_extensions.py  requirements.txt  trakt_cache.sqlite
data/plex_trakt_sync/: get_env_data.py  main.py  trakt_list_util.py
plex_trakt_sync/: __init__.py  __main__.py  clear_trakt_collections.py  cli.py  config.default.json  config.py  database.py  decorators.py  events.py  factory.py  get_env_data.py  listener.py  logging.py  main.py  media.py  memoize.py  nocache.py  path.py  plex_api.py  plex_server.py  pytrakt_extensions.py  requests_cache.py  style.py  sync.py  timer.py  trakt_api.py  trakt_list_util.py  version.py  walker.py
plex_trakt_sync/commands/: cache.py  clear_collections.py  inspect.py  login.py  plex_login.py  sync.py  trakt_login.py  unmatched.py  version.py  watch.py  webhook.py
plex_trakt_sync/decorators/: __init__.py  deprecated.py  http_cache.py  measure_time.py  memoize.py  nocache.py  rate_limit.py  time_limit.py
plextraktsync/: __init__.py  __main__.py  _config.py  cli.py  com.github.plextraktsync.watch.plist  config.default.json  config.default.yml  config.py  console.py  events.py  factory.py  listener.py  logging.py  media.py  path.py  plex_api.py  plex_server.py  pytrakt_extensions.py  rich_addons.py  servers.default.yml  style.py  sync.py  systemd.py  timer.py  trakt_api.py  trakt_list_util.py  version.py  walker.py
plextraktsync/commands/: bug_report.py  cache.py  clear_collections.py  compare_libraries.py  config.py  download.py  healthcheck.py  imdb_import.py  info.py  inspect.py  launchctl.py  login.py  plex_login.py  self_update.py  subdl.py  sync.py  trakt_login.py  unmatched.py  update_playlist.py  version.py  watch.py  watched_shows.py  webhook.py
plextraktsync/config/: Config.py  ConfigLoader.py  ConfigMergeMixin.py  HttpCacheConfig.py  PlexServerConfig.py  RunConfig.py  ServerConfig.py  ServerConfigFactory.py  SyncConfig.py  __init__.py
plextraktsync/db/: Database.py  SyncDatabase.py  SyncRecord.py
plextraktsync/decorators/: account_limit.py  cached_property.py  coro.py  flatten.py  get_limit.py  http_cache.py  measure_time.py  memoize.py  nocache.py  rate_limit.py  retry.py  time_limit.py
plextraktsync/factory/: Factory.py  __init__.py
plextraktsync/logger/: filter.py  init.py  systemd.py
plextraktsync/media/: Media.py  MediaFactory.py  __init__.py
plextraktsync/mixin/: ChangeNotifier.py  RichMarkup.py  SetWindowTitle.py
plextraktsync/plan/: WalkConfig.py  WalkPlan.py  WalkPlanner.py  Walker.py
plextraktsync/plex/: PlexApi.py  PlexAudioCodec.py  PlexGuid.py  PlexGuidProvider.py  PlexGuidProviderIMDB.py  PlexGuidProviderLocal.py  PlexGuidProviderMbid.py  PlexGuidProviderTMDB.py  PlexGuidProviderYoutube.py  PlexId.py  PlexIdFactory.py  PlexLibraryItem.py  PlexLibrarySection.py  PlexPlaylist.py  PlexPlaylistCollection.py  PlexRatings.py  PlexSectionPager.py  PlexServerConnection.py  PlexShowSectionPager.py  PlexWatchList.py  SessionCollection.py  types.py
plextraktsync/plugin/: __init__.py  plugin.py
plextraktsync/queue/: BackgroundTask.py  Queue.py  TraktBatchWorker.py  TraktMarkWatchedWorker.py  TraktScrobbleWorker.py
plextraktsync/rich/: RichHighlighter.py  RichMarkup.py  RichProgressBar.py
plextraktsync/sync/: AddCollectionPlugin.py  ClearCollectedPlugin.py  LikedListsPlugin.py  Sync.py  SyncRatingsPlugin.py  SyncWatchedPlugin.py  TraktListsPlugin.py  WatchListPlugin.py  WatchProgressPlugin.py
plextraktsync/trakt/: PartialTraktMedia.py  ScrobblerCollection.py  ScrobblerProxy.py  TraktApi.py  TraktBatch.py  TraktItem.py  TraktLookup.py  TraktRatingCollection.py  TraktUserList.py  TraktUserListCollection.py  TraktWatchedCollection.py  TraktWatchlist.py  WatchProgress.py  trakt_set.py  types.py
plextraktsync/util/: Cleanup.py  Factory.py  Path.py  Rating.py  Timer.py  Version.py  execp.py  execx.py  expand_id.py  git_version_info.py  local_url.py  openurl.py  packaging.py  parse_date.py  remove_empty_values.py  versions.py
plextraktsync/watch/: EventDispatcher.py  EventFactory.py  FatalErrorState.py  ProgressBar.py  WatchStateUpdater.py  WebSocketListener.py  (+1 more)
src/: config.py  get_env_data.py  main.py  utils.py
tests/: __init__.py  conftest.py  requirements.txt  test_agent_hama.py  test_async.py  test_batch.py  test_collection_metadata.py  test_config.py  test_events.py  test_logger.py  test_new_agent.py  test_plex_id.py  test_plex_search.py  test_plugin.py  test_rating.py  test_rich.py  test_self_update_packaging.py  test_sync_ratings_plugin.py  test_threading.py  test_timer.py  test_trakt_progress.py  test_trakt_search_by_id.py  test_trakt_watched_collection.py  test_trakt_watched_collection_integration.py  test_trakt_watched_shows.py  test_tv_lookup.py  test_version.py  test_walker.py  test_watch_fatal_error.py  test_watched_pagination.py
(+24 files in other folders)
