[build-system]
requires = [
    "setuptools-declarative-requirements>=1.3.0",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
# https://docs.astral.sh/ruff/settings/#lint_extend-select
extend-select = [
    "I", # isort
]
