[metadata]
name = PlexTraktSync
version = attr: plex_trakt_sync.__version__
description = Plex-Trakt-Sync is a two-way-sync between trakt.tv and Plex Media Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Taxel/PlexTraktSync
project_urls =
    Bug Tracker = https://github.com/Taxel/PlexTraktSync/issues
classifiers =
    # See: https://pypi.python.org/pypi?:action=list_classifiers
    Environment :: Console
    # List of python versions and their support status:
    # https://en.wikipedia.org/wiki/CPython#Version_history
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    plex_trakt_sync
    plex_trakt_sync.commands
    plex_trakt_sync.decorators
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    plextraktsync = plex_trakt_sync.cli:cli

[options.data_files]
. =
	requirements.txt
	plex_trakt_sync/config.default.json

[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt
