[metadata]
name = PlexTraktSync
version = attr: plextraktsync.__version__
description = Plex-Trakt-Sync is a two-way-sync between trakt.tv and Plex Media Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Taxel/PlexTraktSync
license = MIT
license_file = LICENSE
classifiers =
    # See: https://pypi.python.org/pypi?:action=list_classifiers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    # List of Python versions and their support status:
    # https://en.wikipedia.org/wiki/History_of_Python#Support
    # https://endoflife.date/python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Bug Tracker = https://github.com/Taxel/PlexTraktSync/issues

[options]
packages =
    plextraktsync
    plextraktsync.commands
    plextraktsync.config
    plextraktsync.decorators
    plextraktsync.logger
    plextraktsync.media
    plextraktsync.mixin
    plextraktsync.plan
    plextraktsync.plex
    plextraktsync.queue
    plextraktsync.rich
    plextraktsync.sync
    plextraktsync.trakt
    plextraktsync.util
    plextraktsync.watch
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    plextraktsync = plextraktsync.cli:cli

[options.data_files]
. =
    requirements.txt
    plextraktsync/config.default.yml

[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt

[flake8]
ignore = E501
