[options]
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.data_files]
. =
    requirements.txt
    plextraktsync/config.default.yml

[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt

[flake8]
ignore = E501
